# filedrift

./: .gitignore  AGENTS.md  LICENSE  README.md  filedrift.py  justfile  pyproject.toml  test_filedrift.py  test_find_missing.py
.github/workflows/: ci.yml
