[project]
name = "filedrift"
version = "0.1.0"
requires-python = ">=3.9"

[tool.ruff]
target-version = "py312"
line-length = 130

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (code has long type signatures and help strings)
]

[tool.ruff.lint.per-file-ignores]
"test_filedrift.py" = ["B011", "E501"]  # ignore assert false and line too long in tests
